--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-to-print": "^2.15.1",
-    "@tailwindcss/forms": "^0.5.7"
+    "react-to-print": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
