--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-linkedin-login-oauth2": "^2.0.1",
     "react-to-print": "^2.15.1"
   },
   "devDependencies": {
